JIB added for docker build Fixed persistence for Kubernetes deployment Added otel collector tracing\metrics for Kubernetes deployment