@@ -22,4 +22,112 @@
         <module>object-events</module>
     </modules>
 
+	<properties>
+		<image.registry.path>localhost:5000</image.registry.path>
+	</properties>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>3.3.0</version>
+					<executions>
+						<execution>
+							<phase>package</phase>
+							<goals>
+								<goal>copy-dependencies</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>target/otel</outputDirectory>
+								<includeArtifactIds>opentelemetry-javaagent</includeArtifactIds>
+								<stripVersion>true</stripVersion>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>com.google.cloud.tools</groupId>
+					<artifactId>jib-maven-plugin</artifactId>
+					<version>3.3.1</version>
+					<configuration>
+						<extraDirectories>
+							<paths>
+								<path>
+									<from>${project.basedir}/target/otel</from>
+									<into>/otel</into>
+								</path>
+							</paths>
+						</extraDirectories>
+						<container>
+							<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+							<jvmFlags>
+								<jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
+								<jvmFlag>-javaagent:/otel/opentelemetry-javaagent.jar</jvmFlag>
+							</jvmFlags>
+						</container>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
+	<profiles>
+		<profile>
+			<!-- CI\CD or local kubernetes -->
+			<id>buildImage</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>com.google.cloud.tools</groupId>
+							<artifactId>jib-maven-plugin</artifactId>
+							<configuration>
+								<to>
+									<image>${image.registry.path}/${project.artifactId}</image>
+								</to>
+							</configuration>
+							<executions>
+								<execution>
+									<goals>
+										<goal>build</goal>
+									</goals>
+									<phase>install</phase>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+
+		<profile>
+			<!-- For local docker env -->
+			<id>buildDocker</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>com.google.cloud.tools</groupId>
+							<artifactId>jib-maven-plugin</artifactId>
+							<configuration>
+								<to>
+									<image>${project.artifactId}</image>
+								</to>
+							</configuration>
+							<executions>
+								<execution>
+									<goals>
+										<goal>dockerBuild</goal>
+									</goals>
+									<phase>install</phase>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
 </project>
